--- a/pom.xml
+++ b/pom.xml
@@ -44,13 +44,13 @@
 			<type>pom</type>
 			<scope>test</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<!-- https://mvnrepository.com/artifact/junit/junit 
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.13</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
@@ -108,6 +108,7 @@
 			<scope>test</scope>
 		</dependency>
 
+
 	</dependencies>
 	<build>
 		<plugins>
@@ -120,19 +121,20 @@
 					<target>1.8</target>
 					<fork>true</fork>
 					<executable>C:\Program Files\java\jdk1.8.0_251\bin\javac.exe</executable>
-					<parallel>methods</parallel>
-					<useUnlimitedThreads>true</useUnlimitedThreads>
+					<!-- <parallel>methods</parallel> <useUnlimitedThreads>true</useUnlimitedThreads> -->
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M4</version>
-				<configuration>
-					<includes>
-						<exclude>**/*TestRunner.java</exclude>
-					</includes>
-				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.surefire</groupId>
+						<artifactId>surefire-junit47</artifactId>
+						<version>3.0.0-M4</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 
